--- a/项目报告.md
+++ b/项目报告.md
@@ -7,7 +7,7 @@
  &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;生成对抗网络（GAN）是一种深度学习模型，由生成器（Generator）和判别器（Discriminator）两个部分组成。GAN的目标是通过对抗训练的方式，让生成器生成的样本与真实样本无法被判别器区分出来，从而生成逼真的数据样本。  
 &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;生成器是一个神经网络模型，它接收一个随机噪声向量作为输入，并输出一个与真实样本相似的数据样本。生成器的目标是尽可能地生成逼真的样本，以欺骗判别器。  
 &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;当模型都是多层感知器时，对抗建模框架最容易应用。要了解发生器在数据 $x$ 上的的分布 $p_g$ ，我们在输入噪声变量 $z$ 上定义一个先验概率 $p_z(z)$ ，然后将到数据空间的映射表示为 $G(z;\theta_g)$ ，其中 $G$ 是一个微分函数，由具有参数 $\theta_g$ 的多层感知器表示。我们还定义了第二个多层感知器 $D(x;\theta_d)$ ，它输出一个标量。 $D(x)$ 表示 $x$ 来自数据而非 $p_g$ 的概率。我们训练 $D$ 来最大化为 $G$ 训练样本和样本分配正确标签的可能性。我们同时训练 $G$ 来最小化。换句话说， $D$ 和 $G$ 玩以下具有价值函数^[1] $V(G,D)$ 的两人最大最小博弈，价值函数如下:  
-$\min_G\max_D V(D,G)=\mathbb{E}_{x\sim p_{data}(x)}[\mathrm{log}D(x)] + \mathbb{E}_{z\sim p_z(z)}[\mathrm{log}(1-D(G(z)))]$
+$$\min_G\max_D V(D,G)=\mathbb{E}_{x\sim p_{data}(x)}[\mathrm{log}D(x)] + \mathbb{E}_{z\sim p_z(z)}[\mathrm{log}(1-D(G(z)))]$$
 
 #### 2. cartoonGAN
 
@@ -37,13 +37,11 @@ $$L(G,D)=\omega_{adv}L_{adv}(G,D)+\omega_{con}L_{con}(G,D)+\omega_{gra}L_{gra}(G
 生成器的损失函数为：
 $$L(G) = w_{adv}E_{p_i \sim S_{data(p)}}[(G(p_i) - 1)^2] + w_{con}L_{con}(G, D) + w_{gra}L_{gra}(G, D) +w_{col}L_{col}(G, D)$$
 判别器的损失函数为：
-$$L(D)= w_{adv}[E_{a_i\sim S_{data(a)}}[(D(a_i) - 1)^2] + E_{pi\sim S_{data(p)}}[(D(G(p_i)))^2] + E_{x_i\sim S_{data}(x)}[(D(G(p_i)))^2] + 0.1E_{y_i\sim S_{data(y)}}[(D(G(y_i)))^2]]$$
-
-以下是animeGAN的生成器和判别器的网络结构图：
-
-![img](animeGAN1.awebp)
-生成器的网络可以看作是编码器-解码器网络。其中主要的模块有标准卷积、深度可分离卷积、残差网络、上采样和下采样模块
-![img](animeGAN3.awebp)
+$$L(D)= w_{adv}[E_{a_i\sim S_{data(a)}}[(D(a_i) - 1)^2] + E_{pi\sim S_{data(p)}}[(D(G(p_i)))^2] + E_{x_i\sim S_{data}(x)}[(D(G(p_i)))^2] + 0.1E_{y_i\sim S_{data(y)}}[(D(G(y_i)))^2]]$$  
+以下是animeGAN的生成器和判别器的网络结构图：  
+<div align=center><img src="animeGAN1.png"></div>  
+生成器的网络可以看作是编码器-解码器网络。其中主要的模块有标准卷积、深度可分离卷积、残差网络、上采样和下采样模块  
+<div align=center><img src="animeGAN2.png"></div>  
 
 ### 二、Configuration
 #### Requirements
